# NodeAI

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  WIFI_ROADMAP.md  rust-toolchain.toml  test_keys.exp
.cargo/: config.toml
.github/workflows/: ci.yml
ai_subsystem/: Cargo.toml
ai_subsystem/src/: aligned_vec.rs  audit.rs  domains.rs  event_bus.rs  inference.rs  lib.rs  model.rs  safety.rs  vector_store.rs
ai_subsystem/src/domains/: memory_ai.rs  power_ai.rs  scheduler_ai.rs  security_ai.rs
ai_subsystem/tests/: integration.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
consciousness-cli/: Cargo.toml
consciousness-cli/src/: main.rs
drivers/: Cargo.toml
drivers/src/: input.rs  lib.rs  pci.rs  serial.rs
drivers/src/virtio/: blk.rs  gpu.rs  mod.rs  net.rs
firmware/: README.md
hal/: Cargo.toml
hal/src/: arch_x86_64.rs  lib.rs
image-builder/: Cargo.toml
image-builder/src/: main.rs
kernel/: Cargo.toml  layout.ld
kernel/.cargo/: config.toml
kernel/src/: adversarial_critic.rs  ahci.rs  ai_engine.rs  anomaly.rs  async_task.rs  auto_security.rs  autotune.rs  binding_events.rs  boot_splash.rs  build_sys.rs  causal.rs  causal_deferral.rs  causal_intervention.rs  causal_prefetch.rs  causal_recovery.rs  coherence.rs  collective_integration.rs  containers.rs  cortex.rs  crash_dump.rs  crash_recovery.rs  critic.rs  cross_modal.rs  debug_counter.rs  efi_vars.rs  el_engine.rs  elf.rs  emotional_arc.rs  entropy.rs  fingerprint.rs  framebuffer.rs  fsck.rs  fuzzer.rs  gdt.rs  git_reader.rs  gla_prefetch.rs  heap_monitor.rs  hot_lock.rs  immune_counter.rs  immune_covert.rs  (+75 more)
kernel/src/acpi/: fadt.rs  madt.rs  mod.rs  rsdp.rs
kernel/src/audio/: mod.rs
kernel/src/consciousness/: binding.rs  deliberation.rs  global_workspace.rs  mod.rs  phi.rs  qualia.rs  self_model.rs
kernel/src/desktop/: ai_chat.rs  appstore.rs  browser.rs  compositor.rs  filemanager_pro.rs  image_viewer.rs  mod.rs  notepad_pro.rs  settings.rs  sysmon.rs  term_window.rs  terminal_app.rs
kernel/src/gpu/: amd.rs  i915.rs  mod.rs
kernel/src/interrupts/: apic.rs  coalesce.rs  io_apic.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  pmm.rs  self_model.rs  slab.rs  vmm.rs
kernel/src/scheduler/: context_switch.rs  mod.rs  runqueue.rs  task.rs
kernel/src/syscall/: mod.rs
kernel/src/usb/: bt.rs  hid.rs  mod.rs  msc.rs
kernel/src/vfs/: blockdev.rs  devfs.rs  mod.rs  path.rs  proc_pid.rs  procfs.rs  ramfs.rs  sensorfs.rs
kernel/src/wifi/: ar9271.rs  crypto.rs  iwlwifi.rs  mod.rs
nodepkg/: Cargo.toml
nodepkg/.cargo/: config.toml
nodepkg/src/: main.rs
scripts/: bisect-test.sh  build.ps1  build_initrd.sh  build_test_hello.sh  build_userspace.sh  convert_qwen35_kernel.py  convert_qwen_kernel.py  kernel_test.sh  run_qemu.ps1  run_qemu.sh  run_vbox.ps1  test_heartbeat.sh
transformer_test/: Cargo.toml
transformer_test/tests/: transformer_math.rs
userspace/projectk_daemon/: Cargo.toml
userspace/projectk_daemon/src/: inference.rs  main.rs  tok.rs
