[workspace]
members = [
    "bootloader",
    "kernel",
    "hal",
    "ai_subsystem",
    "drivers",
    "image-builder",
    "nodepkg",
]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NodeAI Contributors"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1          # Minimal optimization — faster compile, still usable in kernel
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"            # Link-time optimization across crates
codegen-units = 1      # Single codegen unit for best optimization
overflow-checks = false
panic = "abort"        # No unwinding in kernel space
strip = false          # Keep symbols for stack traces

[profile.kernel]
inherits = "release"
debug = 2              # Full debug info even in release for kernel debugging
