[workspace]
members = [
    "bootloader",
    "kernel",
    "hal",
    "ai_subsystem",
    "drivers",
    "image-builder",
    "nodepkg",
    "consciousness-cli",
]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NodeAI Contributors"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = true
debug = 0

[profile.kernel]
inherits = "release"
debug = 0
strip = true
