[package]
name = "nodeai-kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nodeai-kernel"
path = "src/main.rs"

[dependencies]
hal = { path = "../hal" }
ai_subsystem = { path = "../ai_subsystem" }
drivers = { path = "../drivers" }

[dependencies.spin]
version = "0.9"
features = ["once", "mutex", "spin_mutex", "rwlock"]
default-features = false

[dependencies.x86_64]
version = "0.15"
default-features = false
features = ["instructions", "abi_x86_interrupt"]

[dependencies.bootloader_api]
version = "0.11"

[dependencies.linked_list_allocator]
version = "0.10"

[build-dependencies.bootloader]
version = "0.11"
